[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "llowcv"
version = "0.1.1"
description = "Lightweight cv2-like image processing library powered by Pillow"
readme = "README_EN.md"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = ["image", "opencv", "cv2", "pillow", "edge", "lightweight", "camera"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
]
dependencies = ["pillow"]

[project.optional-dependencies]
cv2 = ["numpy", "opencv-python"]
mpl = ["matplotlib"]
dev = ["pytest"]

[tool.hatch.build.targets.wheel]
packages = ["src/llowcv"]

[tool.ty.src]
exclude = [
    "src/llowcv/camera/windows.py",
    "src/llowcv/camera/linux.py",
]

[project.urls]
Homepage = "https://github.com/Moge800/llowCV"
Repository = "https://github.com/Moge800/llowCV"
